--- a/src/nedxml/ChangeLog
+++ b/src/nedxml/ChangeLog
@@ -3,6 +3,9 @@
 	* ned.y: negative int or real constants were parsed as -1*x, which 
 	caused problems for input() with negative default values
 
+	* cppexprgenerator.cc/h: generate inline expression (not expression 
+	class) for const parameters
+
 2004-11-29  Andras Varga
 
 	* ned.y: malloc.h changed to stdlib.h. Change needed for Mac OS/X 
